fix spacing between fields on input form

--- a/view/less/yla-dialog.less
+++ b/view/less/yla-dialog.less
@@ -16,7 +16,6 @@
     background-color: rgba(0, 0, 0, 0.6);
     padding: 16px;
     .yla-dialog {
-        display: flex;
         flex-flow: column nowrap;
         min-width: 0;
         min-height: 0;
